--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="main.css">
     <link href="https://fonts.googleapis.com/css?family=Indie+Flower" rel="stylesheet">
-    <link rel="stylesheet" href="./font-awesome-4.7.0/css/font-awesome.min.css">
+    
+    <link rel="stylesheet"  href="https://use.fontawesome.com/releases/v5.7.2/css/all.css">
     <title>Nishanth Mekala | Portfolio</title>
   </head>
   <body>
@@ -241,9 +242,9 @@
     <div class="row align-items-center">
 
       <div class="col-12 d-flex justify-content-between">
-<a href="#"><i class="fa fa-facebook fa-5x text-warning m-3"></i></a>
-<a href="#"><i class="fa fa-twitter fa-5x text-warning m-3"></i></a>
-<a href="#"><i class="fa fa-instagram fa-5x text-warning m-3"></i></a>
+<a href="#"><i class="fab fa-facebook-square fab-5x text-warning m-3"></i></a>
+<a href="#"><i class="fab fa-twitter fab-5x text-warning m-3"></i></a>
+<a href="#"><i class="fab fa-instagram fab-5x text-warning m-3"></i></a>
 
       </div>
     </div>
@@ -263,7 +264,7 @@
      <div class="col text-center">
 
 <h4 class="text-white text-capitalize">All Rights Reserved </h4>
-<p class="float-right"><a href="#"><i></i></a></p>
+<p class="float-right"><a href="#"><i style="font-size:50px;" class="fas fa-arrow-up"></i></a></p>
      </div>
 
 
