--- a/index.html
+++ b/index.html
@@ -204,7 +204,8 @@
             <div class="card-body">
               <h5 class="card-title">HTML + CSS Projects</h5>
               <p class="card-text">These are the static template projects made with HTML , CSS </p>
-              <a href="#" class="btn btn-primary" data-toggle="modal" data-target="#html+css">Go to the list</a>
+              
+              <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#html+css">Go to the list</button>
             </div>
           </div>
 
@@ -216,7 +217,7 @@
           <div class="card-body">
             <h5 class="card-title">JS Projects</h5>
             <p class="card-text">These are the projects built with JS,HTML & CSS</p>
-            <a href="#" class="btn btn-primary" data-toggle="modal" data-target="#html+css+js">Go to the list</a>
+           <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#html+css+js">Go to the list</button>
           </div>
         </div>
 
@@ -227,7 +228,7 @@
           <div class="card-body">
             <h5 class="card-title">Bootstrap projects</h5>
             <p class="card-text">These are the projects built with Bootstrap</p>
-            <a href="#" class="btn btn-primary" data-toggle="modal" data-target="#bootstrap" >Go to the list</a>
+            <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#bootstrap">Go to the list</button>
           </div>
         </div>
 
@@ -238,7 +239,7 @@
           <div class="card-body">
             <h5 class="card-title">Full Stack Projects</h5>
             <p class="card-text">These are the projects built with Java, Hibernate, MySQL, JSP & Servlet Technology, HTML, CSS, JS & Bootstrap.</p>
-            <a href="#" class="btn btn-primary" data-toggle="modal" data-target="#fullstack">Go to the list</a>
+            <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#fullstack">Go to the list</button>
           </div>
         </div>
 
