--- a/index.html
+++ b/index.html
@@ -310,11 +310,11 @@
 
 <!--HTML + CSS modal begin-->
 
-<div class="modal fade" id="html+css" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+<div class="modal fade" id="html+css" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel1" aria-hidden="true">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">HTML + CSS Projects' list</h5>
+        <h5 class="modal-title" id="exampleModalLabel1">HTML + CSS Projects' list</h5>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
@@ -350,11 +350,11 @@
 
 <!--JS modal begin-->
 
-<div class="modal fade" id="html+css+js" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+<div class="modal fade" id="html+css+js" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel2" aria-hidden="true">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">HTML + CSS + JS  Projects' list</h5>
+        <h5 class="modal-title" id="exampleModalLabel2">HTML + CSS + JS  Projects' list</h5>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
@@ -386,11 +386,11 @@
 
 <!--Bootstrap modal begin-->
 
-<div class="modal fade" id="bootstrap" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+<div class="modal fade" id="bootstrap" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel3" aria-hidden="true">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">Bootstrap  Projects' list</h5>
+        <h5 class="modal-title" id="exampleModalLabel3">Bootstrap  Projects' list</h5>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
@@ -421,11 +421,11 @@
 
 <!--fullstack modal begin-->
 
-<div class="modal fade" id="fullstack" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+<div class="modal fade" id="fullstack" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel4" aria-hidden="true">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">Full Stack Projects' list</h5>
+        <h5 class="modal-title" id="exampleModalLabel4">Full Stack Projects' list</h5>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
@@ -452,11 +452,11 @@
     
   
   
-    <div class="modal fade" id="contactnote" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal fade" id="contactnote" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel5" aria-hidden="true">
       <div class="modal-dialog" role="document">
         <div class="modal-content">
           <div class="modal-header">
-            <h5 class="modal-title" id="exampleModalLabel">Contact Me</h5>
+            <h5 class="modal-title" id="exampleModalLabel5">Contact Me</h5>
             <button type="button" class="close" data-dismiss="modal" aria-label="Close">
               <span aria-hidden="true">&times;</span>
             </button>
