--- a/index.html
+++ b/index.html
@@ -399,7 +399,7 @@
         
 
 
-        <a href="#"> <h5>Coffee_Junkie</h5></a>
+        <a href="https://nishanth123321.github.io/Coffee-Junkie/index.html"> <h5>Coffee_Junkie</h5></a>
         <a href="https://nishanth123321.github.io/Bootstrap_iCoder/"> <h5>iCoder</h5></a>
         <a href="https://nishanth123321.github.io/Nishanth_portfolio/index.html"> <h5>Nishanth_portfolio</h5></a>
         
