--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@
         <a href="#"> <h5>griddemo</h5></a>
         <a href="#"> <h5>flexdemo</h5></a>
         <a href="#"> <h5>business_template</h5></a>
-        <a href="#"> <h5>animated_login</h5></a>
+        <a href="https://nishanth123321.github.io/Animated_Login/"> <h5>animated_login</h5></a>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
