--- a/index.html
+++ b/index.html
@@ -330,7 +330,7 @@
         <a href="https://nishanth123321.github.io/how_to_center_Align_text_with_flex/"> <h5>how_to_center_align_text_with_flex</h5></a>
         <a href="https://nishanth123321.github.io/grid_demo/"> <h5>griddemo</h5></a>
         <a href="https://nishanth123321.github.io/flexdemo/"> <h5>flexdemo</h5></a>
-        <a href="#"> <h5>business_template</h5></a>
+        <a href="https://nishanth123321.github.io/business_template/"> <h5>business_template</h5></a>
         <a href="https://nishanth123321.github.io/Animated_Login/"> <h5>animated_login</h5></a>
       </div>
       <div class="modal-footer">
