--- a/index.html
+++ b/index.html
@@ -363,7 +363,7 @@
         
 
 
-        <a href="#"> <h5>student_grade_calcy</h5></a>
+        <a href="https://nishanth123321.github.io/student_grade_calcy/"> <h5>student_grade_calcy</h5></a>
         <a href="#"> <h5>javascript_quiz</h5></a>
         <a href="#"> <h5>interactive_chart</h5></a>
         <a href="#"> <h5>interactive_js_prompts</h5></a>
