--- a/about.html
+++ b/about.html
@@ -41,7 +41,9 @@
                 <li class="nav-item ">
                   <a class="nav-link" href="index.html#projects">Projects</a>
               </li>
-
+               <li class="nav-item ">
+              <a class="nav-link" href="index.html#achievements">Achievements</a>
+          </li>
               <li class="nav-item ">
                 <a class="nav-link" href="https://drive.google.com/file/d/1gXKgPDGvHMJ5hi95ddls3bqNxUTmRgqA/view?usp=sharing">Resume</a>
             </li>
