--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
             <img class="card-img-top" src="project1.png" alt="Card image cap">
             <div class="card-body">
               <h5 class="card-title">HTML + CSS Projects</h5>
-              <p class="card-text">These are the static template projects made with HTML , CSS </p>
+              <p class="card-text">These are the static template projects made with HTML , CSS. However, these are mini projects mentioned here just for show-case.</p>
               
               <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#html+css">Go to the list</button>
             </div>
@@ -219,7 +219,7 @@
           <img class="card-img-top" src="project2.png" alt="Card image cap">
           <div class="card-body">
             <h5 class="card-title">JS Projects</h5>
-            <p class="card-text">These are the projects built with JS,HTML & CSS</p>
+            <p class="card-text">These are the projects built with JS,HTML & CSS. However, these are mini projects mentioned here just for show-case.</p>
            <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#html+css+js">Go to the list</button>
           </div>
         </div>
@@ -230,7 +230,7 @@
           <img class="card-img-top" src="project3.png" alt="Card image cap">
           <div class="card-body">
             <h5 class="card-title">Bootstrap projects</h5>
-            <p class="card-text">These are the projects built with Bootstrap</p>
+            <p class="card-text">These are the projects built with Bootstrap. However, these are mini projects mentioned here just for show-case.</p>
             <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#bootstrap">Go to the list</button>
           </div>
         </div>
@@ -241,7 +241,7 @@
           <img class="card-img-top" src="project4.png" alt="Card image cap">
           <div class="card-body">
             <h5 class="card-title">Full Stack Projects</h5>
-            <p class="card-text">These are the projects built with Java, Hibernate, MySQL, JSP & Servlet Technology, HTML, CSS, JS & Bootstrap.</p>
+            <p class="card-text">These are the projects built with Java, Hibernate, MySQL, JSP & Servlet Technology, HTML, CSS, JS & Bootstrap. These are major projects.</p>
             <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#fullstack">Go to the list</button>
           </div>
         </div>
