--- a/index.html
+++ b/index.html
@@ -99,8 +99,8 @@
                 <i id="font" class="  fas fa-cog align-self-center mr-3"></i>
               </div>
               <div class="col-12 col-sm-8.5 inner-text">
-                      <h1 class="my-3">HardWork</h1>
-                      <p class="lead">Nishanth is a hard-working guy </p>
+                      <h1 class="my-3">Time Management</h1>
+                      <p class="lead"> I am good at time management because I would like to balance both professional as well as personal life. </p>
             </div>
           </div>
 
@@ -112,7 +112,7 @@
               </div>
               <div class="col-12 col-sm-8.5 inner-text x">
                 <h1 class="my-3">Learning</h1>
-                <p class="lead">I always tend to learn new thing. I feel stopping leearning is the real failure</p>
+                <p class="lead">I always wish to keep learning. I feel stopping learning is the real failure</p>
             </div>
           </div>
             </div>
@@ -122,8 +122,8 @@
                 <i id="font"  class="col-12 fab fa-creative-commons-nd align-self-center mr-3"></i> 
               </div>
               <div class="col-12 col-sm-8.5  inner-text ">
-            <h1>Dedicative</h1>
-            <p>I am a dedicative student you know. A lot of people fear from my dedication actually.</p>
+            <h1>Dedicative & Diligent</h1>
+            <p>I have a strong work ethic because I would not like to leave the things unfinished.</p>
             </div>
             </div>
 
