--- a/index.html
+++ b/index.html
@@ -268,9 +268,14 @@
                   <div class="title">
                       <h1 class="display-4 whites">Acheivements</h1>
                       <div class="title-underline"></div>
-                      <h6 class="whites">1. I got a small cup for my annual performance during my preparation for Navodaya Exam</h6><br>
-                      <h6 class="whites">2. I am offered merit-based scholarship from FFE Organization</h6><br>
-                      <h6 class="whites">3. Our team had achieved the top position in a technical event called IMPROMPTU, Avishkar 2019 conducted in our institution</h6><br>
+                    
+                    <h6 class="whites">* I currently stand at 8th position out of 2.5k+ MNNIT students(including passed out
+seniors)practicing on geeksforgeeks portal.</h6><br>
+                    <h6 class="whites">* I earned some certificates on Java, Problem Solving etc., from HackerRank</h6><br>
+                      <h6 class="whites">*Merit Based Scholarship from the FFE Organization</h6><br>
+                      <h6 class="whites">*Our team has achieved the top position in a technical event IMPROMPTU, AVISHKAR
+2K19 in our college.</h6><br>
+                      <h6 class="whites">*A cup for my annual performance during the preperation of Navodhaya Exam</h6><br>
 
                   </div>
 
